ostree (2016.1-1) UNRELEASED; urgency=medium

  * Remove -dbg package, rely on automatic dbgsym packages instead
  * Extend package descriptions a bit
  * debian/.gitignore: add
  * debian/copyright: fill in all copyright holders and licenses
  * debian/control: set Maintainer to the pkg-utopia team
  * Normalize packaging via `wrap-and-sort -abst`
  * debian/control: move shared library to Section: libs
  * debian/control: remove redundant Section
  * debian/control: change Section to admin
  * Remove unnecessary uses of dh-exec
  * debian/patches: remove all patches, no longer needed or applied
  * Use dh_install --fail-missing to catch mistakes
  * Add a symbols file
  * Add missing dependency on libglib2.0-dev

 -- Simon McVittie <smcv@debian.org>  Wed, 27 Jan 2016 13:04:34 +0100

ostree (2016.1-alexlarsson1~wily1) wily; urgency=medium

  * New upstream release

 -- Alexander Larsson <alexander.larsson@gmail.com>  Thu, 01 Oct 2015 11:28:39 +0200

ostree (2015.11-alexlarsson1~vivid1) vivid; urgency=medium

  * New upstream release

 -- Alexander Larsson <alexander.larsson@gmail.com>  Thu, 01 Oct 2015 11:28:39 +0200

ostree (2015.9-alexlarsson1) vivid; urgency=medium

  * New upstream release

 -- Alexander Larsson <alexander.larsson@gmail.com>  Thu, 01 Oct 2015 11:28:39 +0200

ostree (2015.4-0amigadave2) trusty; urgency=low

  [ David King ]
  * Add build dependency on libattr1-dev. 

 -- David King <amigadave@amigadave.com>  Wed, 08 Apr 2015 13:10:39 +0100

ostree (2015.4-0amigadave1) trusty; urgency=low

  [ David King ]
  * Initial packaging.

 -- David King <amigadave@amigadave.com>  Thu, 02 Apr 2015 15:40:52 +0000