@@ -1,0 +1,2 @@
+usr/lib/*/ostree/installed-tests
+usr/share/installed-tests/ostree
