@@ -14,6 +14,7 @@ ostree (2016.1-1) UNRELEASED; urgency=medium
   * Use dh_install --fail-missing to catch mistakes
   * Add a symbols file
   * Add missing dependency on libglib2.0-dev
+  * Add an ostree-tests package, and use it for autopkgtest
 
  -- Simon McVittie <smcv@debian.org>  Wed, 27 Jan 2016 13:04:34 +0100
 
